--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.68.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
+    "recharts": "^3.6.0",
     "uuid": "^13.0.0",
     "yup": "^1.7.1"
   },
