--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
+    "i18next": "^25.8.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
+    "react-i18next": "^16.5.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.6.0",
